[workspace]
members = [
    "crates/lessons/lesson-1",
    "crates/lessons/lesson-2",
    "crates/lessons/lesson-3",
    "crates/lessons/lesson-4",
    "crates/lessons/lesson-4.5",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
macroquad = "0.4.13"
